# NeuraViz

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  Stack.md
.github/workflows/: deploy.yml  setup.md
docs/: user_stories.md
docs/diagrams/: class_diagram.drawio  class_diagram_backend.drawio  class_diagram_frontend.drawio  primary_workflow_sequence_diagram.drawio
docs/mockups/: Main.xcf
mockups/: Main.xcf
proposal/: presentation.tex  proposal.tex
report/: bibliography.bib  capstone.tex  cover.tex  glossary.tex  signature.tex
report/01_introduction/: introduction.tex
report/02_dev_process/: software_development_process.tex
report/03_design/: design.tex
report/04_implementation/: implementation.tex
report/05_testing/: testing.tex
report/06_security/: security.tex
src/: build.sh
src/backend/: Pipfile  api.py  pyproject.toml  pytest.ini  server.py  start_production.sh
src/backend/controllers/: graph_controller.py
src/backend/models/: Session.py
src/backend/models/graph/: Activation.py  Graph.py  Link.py  LinkCollection.py  Node.py  NodeCollection.py  Position.py
src/backend/services/: session_manager.py
src/backend/src/: api.py
src/backend/src/controllers/: graph_controller.py
src/backend/src/logger/: logger.py
src/backend/src/models/graph/: Graph.py  Link.py  LinkCollection.py  Node.py  NodeCollection.py
src/backend/src/utils/: activation_category_mapper.py
src/backend/tests/: test_graph.py
src/backend/tests/expected_results/get_graph/: nominal.json
src/backend/tests/expected_results/get_graph/keras/: nominal_STE_Iris.json  nominal_STE_MNIST.json
src/backend/tests/expected_results/get_graph/pytorch/: nominal_STE_Iris.json  nominal_STE_MNIST.json
src/backend/tests/file_inputs/: STE_Iris.pth  STE_Iris_Large.pth  STE_Iris_Large_Even_Layer.pth  standard_example.pth
src/backend/utils/: color_helper.py  db_manager.py  tikz_converter.py
src/docs/: conf.py  (+3 more)
test_documentation/: test_cases.md  testing_strategy.md
testing/: test_cases.md
(+64 files in other folders)
