[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Bennett-Wendorf <bennettwendorf@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.18.4"
quart-schema = "^0.17.1"

[tool.poetry.scripts]
start = "src.api:run"
dev = "src.api:run_dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
